--- a/ex3/profile.css
+++ b/ex3/profile.css
@@ -24,13 +24,9 @@ a:hover {
 }
 
 p.shrek {
-  color: white;
+  background-color: #badb34;
+  color: black;
   font-family: comic;
   font-size: 15pt;
   max-width: 300px;
-  text-shadow:
-  -1px -1px black,
-  -1px 1px black,
-  1px -1px black,
-  1px 1px black;
 }
