--- a/ex2/grid.css
+++ b/ex2/grid.css
@@ -1,6 +1,6 @@
 .grid-container {
   display: grid;
-  grid-template-columns: 1fr 380px 40px 380px 1fr;
+  grid-template-columns: 1fr 378px 44px 378px 1fr;
   grid-template-rows: 450px 50px;
   background-color: #badb34;
 }
@@ -39,7 +39,18 @@ button {
   grid-area: 2 / 2 / 3 / 3;
 }
 
+#block {
+  position: relative;
+}
+
 #imagenumber {
+  position: absolute;
+  display: block;
+  top: 50px;
+  text-align: center;
+  height: 50px;
+  width: 44px;
+  background-color: black;
   color: white;
   font-family: sans-serif;
   font-size: 18pt;
