--- a/ex2/grid.css
+++ b/ex2/grid.css
@@ -2,15 +2,23 @@
   display: grid;
   grid-template-columns: 1fr 378px 44px 378px 1fr;
   grid-template-rows: 450px 50px;
-  background-color: #badb34;
 }
 
 body {
-  background-color: grey;
+  background-color: #6b7f1c;
 }
 
 #shrek {
   grid-area: 1 / 2 / 2 / 4;
+  border-top-width: 2px;
+  border-top-color: black;
+  border-top-style: solid;
+  border-left-width: 2px;
+  border-left-color: black;
+  border-left-style: solid;
+  border-right-width: 2px;
+  border-right-color: black;
+  border-right-style: solid;
 }
 
 button {
@@ -26,31 +34,35 @@ button {
 }
 
 #next {
-  border-left-width: 2px;
-  border-left-color: #788934;
-  border-left-style: solid;
+  border-width: 2px;
+  border-color: black;
+  border-style: solid;
   grid-area: 2 / 4 / 3 / 5;
 }
 
 #previous {
-  border-right-width: 2px;
-  border-right-color: #788934;
-  border-right-style: solid;
+  border-width: 2px;
+  border-color: black;
+  border-style: solid;
   grid-area: 2 / 2 / 3 / 3;
 }
 
 #block {
-  position: relative;
+  grid-area: 2 / 3 / 3 / 4;
+  background-color: #badb34;
+  border-bottom-width: 2px;
+  border-bottom-color: black;
+  border-bottom-style: solid;
+  border-top-width: 2px;
+  border-top-color: black;
+  border-top-style: solid;
 }
 
 #imagenumber {
-  position: absolute;
+  position: relative;
+  top: 10px;
   display: block;
-  top: 50px;
   text-align: center;
-  height: 50px;
-  width: 44px;
-  background-color: black;
   color: white;
   font-family: sans-serif;
   font-size: 18pt;
@@ -61,15 +73,4 @@ button {
     1px 1px black;
   align-self: center;
   justify-self: center;
-  grid-area: 2 / 3 / 3 / 4;
-}
-
-#left {
-  grid-area: 1 / 1 / 3 / 2;
-  background-color: grey;
-}
-
-#right {
-  grid-area: 1 / 5 / 3 / 6;
-  background-color: grey;
 }
