--- a/ex4/colorchanger.css
+++ b/ex4/colorchanger.css
@@ -1,7 +1,17 @@
+#maintext {
+  box-shadow: 0px 15px 50px -5px black;
+  font-family: sans-serif;
+  width: 500;
+  border: 5px solid black;
+}
+
 .flex-container {
-  list-style: none;
   display: flex;
   flex-flow: column wrap;
+}
+
+.grid-conatiner-background, .grid-container-border, #maintext, button {
+
 }
 
 .grid-container-background {
@@ -10,7 +20,8 @@
   display: grid;
   align-items: center;
   grid-template-rows: repeat(4,25%);
-  grid-template-columns: repeat(2,50%)
+  grid-template-columns: repeat(2,50%);
+  box-shadow: 0px 15px 50px -5px black;
 }
 
 .grid-container-border {
@@ -20,9 +31,11 @@
   align-items: center;
   grid-template-rows: repeat(5,20%);
   grid-template-columns: repeat(2,50%);
+  box-shadow: 0px 15px 50px -5px black;
 }
 
 .title {
+  font-family: sans-serif;
   padding-top: 6px;
   height: 30px;
   background-color: #f49542;
@@ -30,26 +43,18 @@
 }
 
 .label-1 {
-  height: 30px;
-  background-color: #0ec0f2;
   grid-area: 2 / 1 / 3 / 2;
 }
 
 .label-2 {
-  height: 30px;
-  background-color: #0ec0f2;
   grid-area: 3 / 1 / 4 / 2;
 }
 
 .label-3 {
-  height: 30px;
-  background-color: #0ec0f2;
   grid-area: 4 / 1 / 5 / 2;
 }
 
 .label-4 {
-  height: 30px;
-  background-color: #0ec0f2;
   grid-area: 5 / 1 / 6 / 2;
 }
 
@@ -65,9 +70,17 @@
   grid-area: 4 / 2 / 5 / 3;
 }
 
-.input-1, .input-2, .input-3, .input-4 {
+.label-1, .label-2, .label-3, .label-4{
   height: 30px;
-  opacity: 0.6;
+  background-color: #0ec0f2;
+  transition: 0.5s;
+  font-family: sans-serif;
+}
+
+.input-1, .input-2, .input-3, .input-4 {
+  border-width: 0px;
+  height: 30px;
+  background-color: #dddddd;
   transition: 0.5s;
 }
 
@@ -76,11 +89,11 @@
 }
 
 .input-1:focus, .input-2:focus, .input-3:focus, .input-4:focus {
-  opacity: 1.0;
+  background-color: white;;
 }
 
 .input-1:hover, .input-2:hover, .input-3:hover, .input-4:hover {
-  opacity: 1.0;
+  background-color: white;
 }
 
 button {
@@ -91,9 +104,10 @@ button {
   width: 510px;
   height: 50px;
   transition: 0.5s;
+  box-shadow: 0px 15px 50px -5px black;
 }
 
 button:hover {
-  background-color: black;
+  background-color: #444444;
   color: white;
 }
