--- a/main.css
+++ b/main.css
@@ -7,9 +7,15 @@ p {
     1px 1px black;
   font-size: 15pt;
   font-family: sans-serif;
+  grid-area: 1 / 1 / 2 / 3;
 }
 
 a {
+  position: relative;
+  top: 10px;
+  text-decoration: none;
+  height: 20px;
+  width: 50px;
   color: white;
   text-shadow:
     -1px -1px black,
@@ -17,5 +23,42 @@ a {
     1px -1px black,
     1px 1px black;
   font-size: 15pt;
-  font-family: sans-serif;  
+  font-family: sans-serif;
+}
+
+block:hover {
+  background-color: #3E7CB1;
+  border-color: #3E7CB1;
+}
+
+block {
+  width: 200px;
+  height: 50px;
+  border-radius: 10px;
+  border: 10px solid #0A2463;
+  background-color: #0A2463;
+  transition: 0.5s;
+}
+
+.grid-container {
+  display: grid;
+  height: 700px;
+  width: 700px;
+  grid-template: repeat(3,1fr) / repeat(2,1fr);
+}
+
+#link1 {
+  grid-area: 2 / 1 / 3 / 2;
+}
+
+#link2 {
+  grid-area: 2 / 2 / 3 / 3;
+}
+
+#link3 {
+  grid-area: 3 / 1 / 4 / 2;
+}
+
+#link4 {
+  grid-area: 3 / 2 / 4 / 3;
 }
