--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ p {
 
 a {
   position: relative;
-  top: 10px;
+  top: 12px;
   text-decoration: none;
   height: 20px;
   width: 50px;
@@ -26,12 +26,12 @@ a {
   font-family: sans-serif;
 }
 
-block:hover {
+#link1:hover, #link2:hover, #link3:hover, #link4:hover {
   background-color: #3E7CB1;
   border-color: #3E7CB1;
 }
 
-block {
+#link1, #link2, #link3, #link4 {
   width: 200px;
   height: 50px;
   border-radius: 10px;
