--- a/main.css
+++ b/main.css
@@ -1,3 +1,24 @@
+@media only screen and (max-width: 767px) {
+    #wrapper {
+      width:100%;
+      min-height: 400px;
+      min-width: 320px;
+      z-index: 1;
+      margin: 0px auto;
+      -webkit-box-shadow:  0px 0px 10px 0px #000000;
+      box-shadow:  0px 0px 10px 0px #000000;
+      position:relative; top:0;
+    }
+}
+
+body {
+  background-image: url(wallpaper2you_347831.jpg);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-color: black;
+  transition: 0.5s;
+}
+
 p {
   color: white;
   text-shadow:
@@ -26,15 +47,16 @@ a {
   font-family: sans-serif;
 }
 
-#link1:hover, #link2:hover, #link3:hover, #link4:hover {
+.linkholder:hover {
+  box-shadow: 0px 0px 400px 75px blue;
   background-color: #3E7CB1;
   border-color: #3E7CB1;
 }
 
-#link1, #link2, #link3, #link4 {
+.linkholder {
   width: 200px;
   height: 50px;
-  border-radius: 10px;
+  border-radius: 30px;
   border: 10px solid #0A2463;
   background-color: #0A2463;
   transition: 0.5s;
@@ -42,9 +64,12 @@ a {
 
 .grid-container {
   display: grid;
+  justify-items: center;
+  align-content: center;
+  grid-gap: 10px;
   height: 700px;
   width: 700px;
-  grid-template: repeat(3,1fr) / repeat(2,1fr);
+  grid-template: repeat(5,1fr) / repeat(2,1fr);
 }
 
 #link1 {
@@ -61,4 +86,16 @@ a {
 
 #link4 {
   grid-area: 3 / 2 / 4 / 3;
+}
+
+#link5 {
+  grid-area: 4 / 1 / 5 / 2;
+}
+
+#link6 {
+  grid-area: 4 / 2 / 5 / 3;
+}
+
+#link7 {
+  grid-area: 5 / 1 / 6 / 2;
 }
