--- a/l4ex3/styles.css
+++ b/l4ex3/styles.css
@@ -6,9 +6,18 @@
 }
 
 .flex-container {
+  background-color: white;
+  width: 1200px;
   display: flex;
-  flex-flow: column wrap;
+  flex-flow: row nowrap;
+  justify-content: space-around;
+  box-shadow: 0px 20px 50px -5px black;
 }
+
+.flex-item{
+  height: 220px;
+}
+
 
 #errorUsername, #errorPassword, #errorShopping0, #errorShopping1, #errorShopping2, #errorShopping3, #errorShipping {
   font-size: 20px;
@@ -18,6 +27,7 @@
     -1px 1px black,
     1px -1px black,
     1px 1px black;
+  font-weight: bold;
 }
 
 .receipt-container {
@@ -42,7 +52,7 @@
 }
 
 body {
-  background-color: #888888;
+  background-color: #679636;
 }
 
 .title {
@@ -50,12 +60,9 @@ body {
   font-family: sans-serif;
   font-size: 30px;
   height: 60px;
-  background-color: #555555;
-  grid-area: 1 / 1 / 2 / 3;
-}
-
-.title div {
+  background-color: #273B09;
   color: white;
+  grid-area: 1 / 1 / 2 / 3;
 }
 
 #title {
@@ -81,7 +88,8 @@ body {
 .label {
   transition: 0.5s;
   height: 110px;
-  background-color: white;
+  background-color: #273B09;
+  color: white;
   align-items: center;
   font-family: sans-serif;
   font-size: 15pt;
@@ -90,12 +98,7 @@ body {
 .receipt-item {
   transition: 0.5s;
   height: 110px;
-  color: white;
-  text-shadow:
-    -1px -1px black,
-    -1px 1px black,
-    1px -1px black,
-    1px 1px black;
+  background-color: #BADB34;
   font-family: sans-serif;
   font-size: 15pt;
 }
@@ -133,9 +136,15 @@ body {
 }
 
 .label-6 {
+  color: #BADB34;
+  text-shadow:
+    -1px -1px black,
+    -1px 1px black,
+    1px -1px black,
+    1px 1px black;
+  background-color: #47682C;
   text-align: center;
   height: 180px;
-  background-color: #aaaaaa;
   transition: 0.5s;
   font-family: sans-serif;
   font-size: 20px;
@@ -190,7 +199,13 @@ body {
 .label-1, .label-2, .label-3, .label-4, .label-5 {
   text-align: center;
   height: 60px;
-  background-color: #aaaaaa;
+  color: #BADB34;
+  text-shadow:
+    -1px -1px black,
+    -1px 1px black,
+    1px -1px black,
+    1px 1px black;
+  background-color: #47682C;
   transition: 0.5s;
   font-family: sans-serif;
   font-size: 20px;
@@ -201,7 +216,7 @@ body {
   border-width: 0px;
   height: 60px;
   width: 300px;
-  background-color: #dddddd;
+  background-color: #BADB34;
   transition: 0.5s;
   font-family: sans-serif;
   font-size: 20px;
@@ -225,7 +240,7 @@ body {
 
 .button-1, .button-2 {
   border-width: 0px;
-  background-color: white;
+  background-color: #598929;
   font-family: sans-serif;
   font-size: 18pt;
   width: 600px;
@@ -234,6 +249,6 @@ body {
 }
 
 .button-1:hover, .button-2:hover {
-  background-color: #444444;
+  background-color: #3B5B1A;
   color: white;
 }
