--- a/l4ex3/styles.css
+++ b/l4ex3/styles.css
@@ -61,7 +61,12 @@ body {
   font-size: 30px;
   height: 60px;
   background-color: #273B09;
-  color: white;
+  color: #BADB34;
+  text-shadow:
+    -1px -1px black,
+    -1px 1px black,
+    1px -1px black,
+    1px 1px black;
   grid-area: 1 / 1 / 2 / 3;
 }
 
@@ -89,7 +94,12 @@ body {
   transition: 0.5s;
   height: 110px;
   background-color: #273B09;
-  color: white;
+  color: #BADB34;
+  text-shadow:
+    -1px -1px black,
+    -1px 1px black,
+    1px -1px black,
+    1px 1px black;
   align-items: center;
   font-family: sans-serif;
   font-size: 15pt;
@@ -239,6 +249,12 @@ body {
 }
 
 .button-1, .button-2 {
+  color: #BADB34;
+  text-shadow:
+    -1px -1px black,
+    -1px 1px black,
+    1px -1px black,
+    1px 1px black;
   border-width: 0px;
   background-color: #598929;
   font-family: sans-serif;
